--- a/个人简历/CSS/style_03.css
+++ b/个人简历/CSS/style_03.css
@@ -17,7 +17,8 @@ table{padding-left: 10px}
     float: left;
     padding: 0px;
     margin: 0px;
-    border: 0px}
+    border: 0px;
+height:200px;}
 .main1 ,.main2,.main3,.main4,.main5 {
     float: left;
     border:1px solid;
