--- a/个人简历/CSS/style_03.css
+++ b/个人简历/CSS/style_03.css
@@ -18,11 +18,11 @@ table{padding-left: 10px}
     padding: 0px;
     margin: 0px;
     border: 0px;
-height:200px;}
+height:100px;}
 .main1 ,.main2,.main3,.main4,.main5 {
     float: left;
     border:1px solid;
-    width: 100%}
+    width: 100px;}
 .xinxi1.lianxi1,.nengli1,.jiaoyu1,.xiangmu1{
     float: left;
     padding-left: 10px;
