--- a/个人简历/CSS/style_03.css
+++ b/个人简历/CSS/style_03.css
@@ -7,7 +7,7 @@ h1{background: burlywood;
 .title{background: sandybrown;}
 h2{border: 0px solid;
 
-    height: 80px;
+    height: 200px;
     padding: 0px
     
 }
@@ -16,16 +16,18 @@ table{padding-left: 10px}
     background:seagreen;
     float: left;
     padding: 0px;
-    margin: 0px;
+    margin-bottom: 0px;
     border: 0px;
-height:100px;}
+    height: 100px;
+}
 .main1 ,.main2,.main3,.main4,.main5 {
     float: left;
     border:1px solid;
     width: 100%;
-    height:100px;}
+    height: 100px;
+}
 .xinxi1.lianxi1,.nengli1,.jiaoyu1,.xiangmu1{
     float: left;
     padding-left: 10px;
-    border:0px solid;
+    border: 0px solid;
 }
